--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
     "compilerOptions": {
-    "target": "es2022",
-    "outDir": "./dist",
-    "rootDir": "./src"
+        "target": "es2022",
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "jsx": "react",
+        "jsxFactory": "createElement"
     }
 }
