--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "json": "json-server data.js -p 4600",
+    "wds": "webpack serve",
+    "start": "npm-run-all -p json wds"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.10.0",
+    "json-server": "^0.17.3",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.2",
@@ -19,6 +23,7 @@
     "webpack-dev-server": "^5.0.2"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bootstrap": "^5.3.3"
   }
 }
