--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.10.0",
+    "express": "^4.18.2",
     "json-server": "^0.17.3",
     "npm-run-all": "^4.1.5",
     "style-loader": "^3.3.4",
